--- a/css/andy.css
+++ b/css/andy.css
@@ -1,3 +1,8 @@
+#story-andy #intro .container-video {
+  /*background-image: url(../img/andy/bg-andy-intro-video.png);
+  background-size: cover;*/
+}
+
 section#multicultural {
   margin-top: 5rem;
 }
