--- a/css/main.css
+++ b/css/main.css
@@ -70,6 +70,7 @@ h1, h2, h3, h4, h5, h6 {
 h6 {
   font-size: 0.7rem;
   color: white;
+  font-weight: normal;
   letter-spacing: 0.2rem;
   text-transform: uppercase;
   font-family: "Work Sans", sans-serif;
@@ -267,17 +268,7 @@ img {
   animation-fill-mode: both;
 }
 
-#container-classroom-infographic img#brush-stroke-1 {
-  -webkit-animation-name: simpleFadeIn;
-  animation-name: simpleFadeIn;
-  -webkit-animation-duration: 1.5s;
-  animation-duration: 1.5s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-  -webkit-animation-delay: 0.5s;
-  animation-delay: 2s;
-}
-
+#container-classroom-infographic img#brush-stroke-1,
 #container-classroom-infographic img#brush-stroke-2 {
   -webkit-animation-name: simpleFadeIn;
   animation-name: simpleFadeIn;
@@ -285,8 +276,16 @@ img {
   animation-duration: 1.5s;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
+}
+
+#container-classroom-infographic img#brush-stroke-1 {
   -webkit-animation-delay: 0.5s;
-  animation-delay: 4s;
+  animation-delay: 0.5s;
+}
+
+#container-classroom-infographic img#brush-stroke-2 {
+  -webkit-animation-delay: 2s;
+  animation-delay: 2s;
 }
 
 p.para-fade {
@@ -361,7 +360,6 @@ p.para-fade {
   padding-bottom: 10px;
   opacity: 0.7;
   color: #333;
-  font-weight: bold;
 }
 
 #thanks-link {
@@ -427,6 +425,34 @@ p.para-fade {
   font-size: 0.85rem;
   letter-spacing: 0.2rem;
   color: white;
+}
+
+.question button {
+	display: block;
+	background: transparent;
+	border: none;
+	text-transform: uppercase;
+	letter-spacing: 0.2rem;
+	color: white;
+	min-height: 77px;
+	min-width: 230px;
+	padding: 0 2rem;
+	cursor: pointer;
+	margin: auto;
+	margin-top: 1rem;
+	margin-bottom: 1rem;
+	font-size: 0.8rem;
+}
+
+.question button:hover,
+.question button:focus,
+.question button:active {
+	background-image: url('../img/hover-questions-brush.png');
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-size: 100% 100%;
+	color: #999;
+	border: none;
 }
 
 .question input#text-input {
@@ -1035,6 +1061,7 @@ body.noscroll {
 
   #about-us-text {
     position: static;
+    -webkit-transform: translate(0, 0);
     transform: translate(0, 0);
     margin-top: 2rem;
     padding: 2.5rem;
@@ -1088,8 +1115,14 @@ body.noscroll {
   }
 
   #container-stories-explanation-1,
-  #container-stories-explanation-2 {
+  #container-stories-explanation-2,
+  #container-thankyou-fade-1,
+  #container-thankyou-fade-2 {
     padding: 2.5rem;
+  }
+
+  #bg-thankyou .button-next {
+    top: 9rem;
   }
 }
 
@@ -1112,7 +1145,7 @@ body.noscroll {
 }
 
 /* for non-mobile devices for the yellow paint to hover */
-@media(min-width: 31.25em) {
+/*@media(min-width: 31.25em) {
   .question button:hover,
   .question button:focus,
   .question button:active {
@@ -1124,14 +1157,19 @@ body.noscroll {
     max-height: 100%;
     width: auto;
   }
-}
+}*/
 
 
 /* 460 px */
 @media(max-width: 28.75em) {
-  section#stories-explanation {
-    height: 40vh;
+
+  #bg-index .button-next {
+    top: 7rem;
   }
+
+  /*section#stories-explanation {
+    height: 40vh;
+  }*/
 
   p.para-fade {
     padding: 0 1rem;
@@ -1162,9 +1200,9 @@ body.noscroll {
     width: 90%;
   }
 
-  p {
+  /*p {
     font-size: .95rem !important;
-  }
+  }*/
 
   section#assumptions {
     margin-top: 3em;
@@ -1195,7 +1233,9 @@ body.noscroll {
   }
 
   #container-stories-explanation-1,
-  #container-stories-explanation-2 {
+  #container-stories-explanation-2,
+  #container-thankyou-fade-1,
+  #container-thankyou-fade-2 {
     padding: 0rem;
   }
 
@@ -1243,9 +1283,9 @@ body.noscroll {
     padding-top: 5%;
   }
 
-  #container-brushes {
+  /*#container-brushes {
     width: 35em;
-  }
+  }*/
 
   .container-brush {
     width: 47%;
@@ -1261,19 +1301,36 @@ body.noscroll {
 
 /* 600px */
 @media (max-height: 37.5em) {
-  #container-brushes {
+  /*#container-brushes {
     width: 30em;
-  }
+  }*/
 
   .container-story-text {
     font-size: 0.9rem;
     letter-spacing: 0.03rem;
   }
+
+  #container-thankyou-fade-1,
+  #container-thankyou-fade-2 {
+    position: static;
+    -webkit-transform: translate(0, 0);
+    transform: translate(0, 0);
+  }
+
+  #container-thankyou-fade-1 {
+    margin-top: 5rem;
+  }
+
+  #container-thankyou-fade-2 {
+    margin-top: 2rem;
+  }
 }
 
 /* 550px */
 @media (max-height: 34.375em) {
-
+  .question button {
+    min-height: 60px;
+  }
 }
 
 /* 500px */
@@ -1284,6 +1341,10 @@ body.noscroll {
 
   #container-brushes {
     width: 25em;
+  }
+
+  .question button {
+    min-height: 50px;
   }
 }
 
