--- a/css/main.css
+++ b/css/main.css
@@ -1,24 +1,3 @@
-/*
-NOTES AND REMINDERS
-===================
-
-Every story section has its own .col-full or .col-left or .col-right,
-so each one needs to be styled individually! even though all
-.col-fulls will likely all be 100%, I separated them anyways
-just in case!
-
-
-*/
-
-
-
-
-/*outlines everything for testing purposes*/
-* {
-  /*border: 1px solid orange;*/
-}
-
-
 @font-face {
     font-family: "Work Sans";
     src: url('../fonts/WorkSans-Regular.woff2') format('woff2'),
@@ -186,6 +165,8 @@ button:focus {
   text-decoration: none;
   border-bottom: solid 1px #ccc;
   transition: all .2s ease-in-out;
+  display: inline-block;
+  margin-bottom: 1rem;
 }
 
 .link-works-cited:hover {
@@ -804,6 +785,7 @@ section#conclusion-text {
 
 .citation.special-thanks {
   margin-top: 1.4rem;
+  margin-bottom: 1rem;
 }
 
 /* ----------------------------- story styling ----------------------------- */
@@ -1310,12 +1292,9 @@ body.noscroll {
 
 /* 570 px */
 @media(max-width: 35.625em) {
-  /*#container-brushes .brush-link {
-    height: 20rem;
-  }*/
+
   #container-classroom-infographic {
     max-width: 100%;
-    /*max-height:50vh;*/
   }
 
   .next-story,
@@ -1373,10 +1352,6 @@ body.noscroll {
   #bg-index .button-next {
     top: 7rem;
   }
-
-  /*section#stories-explanation {
-    height: 40vh;
-  }*/
 
   p.para-fade {
     padding: 0 1rem;
@@ -1488,7 +1463,16 @@ body.noscroll {
   }
 }
 
+/* 300 px */
+@media(max-width: 21em) {
+  #bg-index .button-next {
+    top: 9.5rem;
+  }
 
+  #container-brushes {
+    width: 20rem !important;
+  }
+}
 
 /*========================
   MEDIA QUERIES - MAX-HEIGHT
@@ -1506,10 +1490,6 @@ body.noscroll {
   .question {
     padding-top: 5%;
   }
-
-  /*#container-brushes {
-    width: 35em;
-  }*/
 
   .container-brush {
     width: 47%;
@@ -1529,9 +1509,6 @@ body.noscroll {
 
 /* 600px */
 @media (max-height: 37.5em) {
-  /*#container-brushes {
-    width: 30em;
-  }*/
 
   .container-story-text {
     font-size: 0.9rem;
@@ -1546,16 +1523,6 @@ body.noscroll {
     margin-top: 1rem;
   }
 }
-
-/*@media (max-height: 556px) {
-  #container-classroom-infographic {
-    width: 70vh;
-  }
-
-  #index-container-fade-1, #index-container-fade-2, #index-container-fade-3 {
-    margin-top: 1.5rem;
-  }
-}*/
 
 /* 550px */
 @media (max-height: 34.375em) {
